Added initial test of header size